--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:3500",
   "name": "backend",
   "version": "1.0.0",
   "description": "",
@@ -13,9 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.0",
     "mongoose": "^8.3.3",
     "nodemon": "^3.1.0"
