--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-logs
+# Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,19 +7,28 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependency directories
+node_modules/
+
+# Build directories
+dist/
+dist-ssr/
+
+# Local environment files
 *.local
+
+# Vite build cache
 .vite/
 
 # Editor directories and files
-.vscode/*
+.vscode/
 !.vscode/extensions.json
-.idea
+.idea/
+
+# Miscellaneous
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+
+# Ignore the .env file
+.env
+.env.test
+
