--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-easier": "^3.0.12",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "stripe": "^15.7.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -30,4 +31,3 @@
     "vite": "^5.2.0"
   }
 }
-
