--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "vite build"
+    "build": "npm install --prefix ./client && npm run build --prefix ./client && npm install"
+    
   },
   "keywords": [],
   "author": "",
