--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,6 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "build": "npm install --prefix ./client && npm run build --prefix ./client && npm install"
-    
   },
   "keywords": [],
   "author": "",
@@ -23,7 +22,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.6.0",
     "mongoose": "^8.3.3",
-    "nodemon": "^3.1.0",
     "stripe": "^15.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
+
