--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "npm install --prefix ./client && npm run build --prefix ./client && npm install"
+    "build": "cd client && npm install && npm run build && cd .. && npm install"
   },
   "keywords": [],
   "author": "",
