--- a/backend/package.json
+++ b/backend/package.json
@@ -7,22 +7,26 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build": "cd frontend && npm install && npm run build && cd .. && npm install"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.6.0",
-    "mongoose": "^8.3.3",
-    "nodemon": "^3.1.0",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.4.0",
     "stripe": "^15.7.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
 
